feat: add ru comment on node